# simlab

./: .gitignore  CMakeLists.txt  README.md
4d/: CMakeLists.txt  hypercube4d.cpp  hypercube4d.hpp  main.cpp  point.vert
nural/: neural_viz.html
shaders/: cloth.frag  cloth.vert  edge.frag  edge.vert  neural.frag  neural.vert  particle.frag  particle.vert  point.frag
src/: audio_sim.hpp  boids_sim.hpp  cloth_sim.hpp  gol3d_sim.hpp  hypercube4d.cpp  hypercube4d.hpp  lorenz_sim.hpp  main.cpp  mandelbrot_sim.hpp  neural_sim.hpp  particle_sim.hpp  pendulum_sim.hpp  wave_sim.hpp
